# o-sfu-benchmarks

./: Cargo.toml  README.md
benches/: bitrate_counter.rs  consumer_packet_gate.rs  local_vp8_fanout.rs  packet_loop_cold_path.rs  packet_metrics.rs  performance_hardening.rs  pure_packet_loop_allocations.rs  pure_packet_loop_turn.rs  routing_miss_fingerprint.rs  rtc_udp_demux.rs  simd_packet_hotpath.rs  source_policy_refresh.rs
reports/: cold_path_packet_loop.md
src/: bitrate_counter.rs  consumer_packet_gate.rs  lib.rs  local_vp8_fanout.rs  packet_loop_cold_path.rs  packet_metrics.rs  performance_hardening.rs  pure_packet_loop.rs  routing_miss_fingerprint.rs  rtc_udp_demux.rs  simd_packet_hotpath.rs  source_policy_refresh.rs
