[package]
name = "o-sfu-benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
o-sfu-core = { path = "../o-sfu/core", features = ["packet-loop-verification"] }
o-sfu-rfc = { path = "../o-sfu/rfc" }

[dev-dependencies]
criterion = "0.7"
dhat = "0.3.3"

[[bench]]
name = "rtc_udp_demux"
harness = false

[[bench]]
name = "performance_hardening"
harness = false

[[bench]]
name = "simd_packet_hotpath"
harness = false

[[bench]]
name = "consumer_packet_gate"
harness = false

[[bench]]
name = "bitrate_counter"
harness = false

[[bench]]
name = "local_vp8_fanout"
harness = false

[[bench]]
name = "source_policy_refresh"
harness = false

[[bench]]
name = "packet_metrics"
harness = false

[[bench]]
name = "pure_packet_loop_turn"
harness = false

[[bench]]
name = "pure_packet_loop_allocations"
harness = false
